<resources>
    <string name="app_name">Дневник тренировок</string>

    <!-- Login Screen -->
    <string name="login_subtitle">Войдите в свой аккаунт</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="action_login">Войти</string>
    <string name="no_account_register">Нет аккаунта? Зарегистрироваться</string>

    <!-- Register Screen -->
    <string name="register_title">Регистрация</string>
    <string name="register_subtitle">Создайте аккаунт для начала</string>
    <string name="hint_name">Имя</string>
    <string name="hint_confirm_password">Подтвердите пароль</string>
    <string name="action_register">Зарегистрироваться</string>
    <string name="have_account_login">Уже есть аккаунт? Войти</string>

    <!-- Errors -->
    <string name="error_empty_email">Введите email</string>
    <string name="error_invalid_email">Некорректный email</string>
    <string name="error_empty_password">Введите пароль</string>
    <string name="error_short_password">Пароль должен содержать минимум 8 символов</string>
    <string name="error_passwords_mismatch">Пароли не совпадают</string>
    <string name="error_empty_name">Введите имя</string>
    <string name="error_network">Ошибка сети. Проверьте подключение.</string>
    <string name="error_unknown">Произошла ошибка. Попробуйте позже.</string>

    <!-- Main Navigation -->
    <string name="nav_trainings">Тренировки</string>
    <string name="nav_statistics">Статистика</string>
    <string name="nav_exercises">Упражнения</string>
    <string name="nav_articles">Информация</string>
    <string name="nav_profile">Профиль</string>

    <!-- Common -->
    <string name="loading">Загрузка…</string>
    <string name="success">Успешно</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="add">Добавить</string>
    <string name="confirm">Подтвердить</string>
    <string name="logout">Выйти</string>

    <!-- Fragments -->
    <string name="fragment_trainings">Тренировки</string>
    <string name="fragment_statistics">Статистика</string>
    <string name="fragment_exercises">Упражнения</string>
    <string name="fragment_articles">Информация</string>
    <string name="fragment_profile">Профиль</string>
    
    <!-- Exercises -->
    <string name="no_exercises">Нет упражнений</string>
    <string name="all_muscles">Все мышцы</string>
    <string name="all_equipment">Все оборудование</string>
    <string name="all_exercises">Все упражнения</string>
    <string name="search">Поиск</string>
    <string name="search_exercises">Поиск упражнений…</string>
    <string name="clear_search">Очистить поиск</string>
    <string name="filter_by_muscle">Группы мышц:</string>
    <string name="filter_by_equipment">Оборудование:</string>
    <string name="exercise_type_reps_weight">Повторения/Вес</string>
    <string name="exercise_type_time_weight">Время/Вес</string>
    <string name="exercise_type_time_distance">Время/Дистанция</string>
    <string name="exercise_type_time_weight_distance">Время/Вес/Дистанция</string>
    <string name="exercise_detail">Детали упражнения</string>
    <string name="technique">Техника выполнения</string>
    <string name="video">Видео</string>
    <string name="play_video">Воспроизвести видео</string>
    <string name="create_exercise">Создать упражнение</string>
    <string name="edit_exercise">Редактировать упражнение</string>
    <string name="delete_exercise_confirm">Удалить это упражнение?</string>
    
    <!-- Programs -->
    <string name="my_programs">Мои программы</string>
    <string name="no_programs">Нет программ тренировок</string>
    <string name="create_program">Создать программу</string>
    <string name="edit_program">Редактировать программу</string>
    <string name="edit_workout">Редактировать тренировку</string>
    <string name="tap_to_edit_program">Нажмите чтобы изменить название и описание</string>
    <string name="no_description">Описание отсутствует</string>
    <string name="delete_program">Удалить программу</string>
    <string name="delete_program_confirm">Удалить эту программу?</string>
    <string name="program_name">Название программы</string>
    <string name="program_description">Описание программы</string>
    <string name="workouts_count">Тренировок: %d</string>
    <string name="create_workout">Создать тренировку</string>
    <string name="workout_name">Название тренировки</string>
    <string name="workout_comment">Комментарий</string>
    <string name="add_exercise">Добавить упражнение</string>
    <string name="superset">Суперсет</string>
    <string name="sets_count">Подходы: %d</string>
    <string name="dropset">Дропсет</string>
    <string name="regular_set">Обычный подход</string>
    <string name="program_detail">Детали программы</string>
    <string name="workouts">Тренировки</string>
    <string name="start_workout">Начать тренировку</string>
    <string name="exercises_in_workout">Упражнений: %d</string>
    <string name="workout_detail">Детали тренировки</string>
    <string name="no_workouts">Нет тренировок в программе</string>
    <string name="manage_exercises">Управление упражнениями</string>
    <string name="planned_sets">Планируемые подходы</string>
    <string name="target_weight">Вес: %s кг</string>
    <string name="target_reps">Повторения: %d</string>
    <string name="dropset_entry" formatted="false">%s кг × %d</string>
    
    <!-- Create Exercise -->
    <string name="create_exercise_title">Создать упражнение</string>
    <string name="exercise_name">Название упражнения</string>
    <string name="exercise_type">Тип упражнения</string>
    <string name="exercise_description">Описание</string>
    <string name="exercise_technique">Техника выполнения</string>
    <string name="exercise_video_url">Ссылка на видео (YouTube)</string>
    <string name="target_muscles">Целевые мышцы</string>
    <string name="secondary_muscles">Дополнительные мышцы</string>
    <string name="equipment">Оборудование</string>
    <string name="tap_to_toggle_primary">Нажмите чтобы сделать целевой/дополнительной</string>
    <string name="primary">Целевая</string>
    <string name="secondary">Дополнительная</string>
    <string name="exercise_created">Упражнение создано</string>
    <string name="exercise_updated">Упражнение обновлено</string>
    <string name="error_fill_required">Заполните обязательные поля</string>
    <string name="type_reps_weight">Повторения + Вес</string>
    <string name="type_time_weight">Время + Вес</string>
    <string name="type_time_distance">Время + Дистанция</string>
    <string name="type_time_weight_distance">Время + Вес + Дистанция</string>
    <string name="exercises">Упражнения</string>
    <string name="exercise">Упражнение</string>

    <!-- Exercise Management in Workout -->
    <string name="no_exercises_in_workout">Нет упражнений. Нажмите + чтобы добавить.</string>
    <string name="manage_sets">Управление подходами</string>
    <string name="delete_exercise">Удалить упражнение</string>
    <string name="delete_exercise_confirm_workout">Удалить это упражнение из тренировки?</string>
    <string name="exercise_deleted">Упражнение удалено</string>
    <string name="add_regular_set">+ Обычный</string>
    <string name="add_dropset">+ Дропсет</string>
    <string name="close">Закрыть</string>
    <string name="add_set">Добавить подход</string>
    <string name="edit_set">Редактировать подход</string>
    <string name="delete_set">Удалить подход</string>
    <string name="set_type">Тип подхода</string>
    <string name="weight_kg">Вес (кг)</string>
    <string name="repetitions">Повторения</string>
    <string name="time_seconds">Время (сек)</string>
    <string name="distance_meters">Дистанция (м)</string>
    <string name="dropset_entries">Записи дропсета</string>
    <string name="add_dropset_entry">+ Запись дропсета</string>
    <string name="remove">Удалить</string>
    <string name="superset_group_number">Номер суперсета (опционально)</string>
    <string name="set_saved">Подход сохранён</string>
    <string name="set_deleted">Подход удалён</string>
    <string name="exercise_added">Упражнение добавлено</string>
    <string name="exercise_updated_in_workout">Упражнение обновлено</string>
    <string name="sets_saved">Подходы сохранены</string>
    <string name="set_regular">Обычный</string>
    <string name="set_dropset">Дропсет</string>
    <string name="dropset_label">ДРОПСЕТ</string>
    <string name="regular_label">ОБЫЧНЫЙ</string>
    <string name="set_number" formatted="false">Подход #%d</string>
    <string name="history">История</string>
    <string name="session_history">История тренировок</string>
    <string name="expand_collapse">Раскрыть / свернуть</string>

    <!-- Profile Screen -->
    <string name="edit_profile">Редактировать профиль</string>
    <string name="settings">Настройки</string>
    <string name="export_data">Экспорт данных</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="confirm_delete_account">Вы уверены, что хотите удалить аккаунт? Это действие необратимо.</string>

    <!-- Edit Profile -->
    <string name="title_edit_profile">Редактирование профиля</string>
    <string name="hint_birth_date">Дата рождения</string>
    <string name="hint_gender">Пол</string>
    <string name="gender_male">Мужской</string>
    <string name="gender_female">Женский</string>

    <!-- Settings -->
    <string name="title_settings">Настройки</string>
    <string name="settings_units">Единицы измерения</string>
    <string name="settings_weight_unit">Вес</string>
    <string name="settings_length_unit">Длина</string>
    <string name="settings_distance_unit">Дистанция</string>
    <string name="settings_theme">Тема</string>
    <string name="settings_language">Язык</string>
    <string name="unit_kg">Кг</string>
    <string name="unit_lb">Фунты</string>
    <string name="unit_cm">См</string>
    <string name="unit_inch">Дюймы</string>
    <string name="unit_km">Км</string>
    <string name="unit_miles">Мили</string>
    <string name="theme_light">Светлая</string>
    <string name="theme_dark">Тёмная</string>
    <string name="lang_ru">Русский</string>
    <string name="lang_en">English</string>

    <!-- Arrays for Settings Spinners -->
    <string-array name="weight_units_array">
        <item>@string/unit_kg</item>
        <item>@string/unit_lb</item>
    </string-array>

    <string-array name="length_units_array">
        <item>@string/unit_cm</item>
        <item>@string/unit_inch</item>
    </string-array>

    <string-array name="distance_units_array">
        <item>@string/unit_km</item>
        <item>@string/unit_miles</item>
    </string-array>

    <string-array name="theme_array">
        <item>@string/theme_light</item>
        <item>@string/theme_dark</item>
    </string-array>

    <string-array name="language_array">
        <item>@string/lang_ru</item>
        <item>@string/lang_en</item>
    </string-array>

</resources>
