<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_trainings"
        android:icon="@drawable/ic_trainings"
        android:title="@string/nav_trainings" />

    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/nav_statistics" />

    <item
        android:id="@+id/navigation_exercises"
        android:icon="@drawable/ic_exercises"
        android:title="@string/nav_exercises" />

    <item
        android:id="@+id/navigation_articles"
        android:icon="@drawable/ic_articles"
        android:title="@string/nav_articles" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>
